--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -357,15 +357,13 @@ Status,File,Node,Line ID,Hash,Text
 ,,"RoseIntro",,,
 ,,,"#c842b4","#4cdb07","Você aproveita a liberação antecipada da aula para visitar o Restaurante Universitário enquanto não está lotado."
 ,,,"#709082","#b4d0dc","Logo a frente está o prédio central do campus. Você entra em direção ao RU."
-,,,"#9c6718","#94e1b5","..."
-,,,"#4b68ad","#94e1b5","..."
 ,,,"#b756e0","#eb63b4","Quando você chega na fila, você vê uma figura familiar."
 ,,,"#95ec88","#bf2b97","PLAYER: Ei, Cravo, veio comer no RU também?"
 ,,,"#3384af","#9390fb","CRAVO: <Novato>! Se arriscando no RU na primeira semana? Coragem!"
 ,,,"#0829ab","#c61855","PLAYER: Preciso saber se vou ter que viver de brotinho instantâneo do dormitório ou não, haha."
-,,,"#48d4d1","#b36f98","CRAVO: O RU da dez a zero em comida pré pronta, nem que você venha só pra se atualizar das fofocas da faculdade!"
+,,,"#48d4d1","#250a33","CRAVO: O RU da dez a zero em comida pré pronta, nem que você venha só pra se atualizar das fofocas da faculdade!"
 ,,,"#ffc787","#34d12f","Vocês continuam a conversar durante todo o caminho da fila."
-,,,"#d13af7","#6e4222","O Cravo fala bastante sobre a faculdade."
+,,,"#d13af7","#93f4ff","O Cravo fala bastante sobre a faculdade."
 ,,,"#6b9fff","#1a490e","E te atualiza dos grandes acontecimentos do semestre anterior."
 ,,,"#61961a","#ca9880","CRAVO: ... E é por isso que eles não permitem mais as festas das atléticas no campus, a gente tem que ficar procurando outros locais."
 ,,,"#496b90","#64f42f","CRAVO: A Rosa enlouquece com isso, porque todos os locais públicos tem a questão de segurança, sabe?"
@@ -406,7 +404,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#7db6d3","#8f4022","CRAVO: Ei!"
 ,,,"#8ce76d","#dbb5e3","ROSA: Viu, até <x> <calouro> <preferido> concorda comigo."
 ,,,"#da3f81","#785b25","CRAVO: Oxe... Mas <ele> é <x> <único> <calouro> que eu conversei direito até agora!"
-,,,"#c4c086","#56f917","ROSA: Nem foi uma decisão totalmente minha, foi da reitoria."
+,,,"#c4c086","#40fce4","ROSA: Mas enfim... Nem foi uma decisão totalmente minha, foi da reitoria."
 ,,,"#7b4093","#99bb91","ROSA: A gente conseguiu fazer com que a calourada fosse no pátio, desde que ninguém envolvido com o incidente do semestre passado fizesse parte do comitê."
 ,,,"#ee6f9e","#2d5b4c","PLAYER: E quando que vai ser a Calourada?"
 ,,,"#d63c69","#40041b","ROSA: Depois de amanhã, durante toda a tarde!"
@@ -459,12 +457,12 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#b7f2b5","#b47e2d","CARU: E eu fui o enviado do universo pra te dar uma bronca sobre pontualidade."
 ,,,"#47bb20","#9bdf61","PLAYER: Pera, que?? O que isso significa?"
 ,,,"#224a6d","#142ea1","Você se apressa com a escolha de roupa, e de forma atrapalhada, tenta se vestir em tempo recorde."
-,,,"#f2bdb2","#0f44e0","PLAYER: Tsk. <Obrigado> pelo alerta, mestre dos magos. Eu só perguntei o horário!"
+,,,"#f2bdb2","#b65b27","PLAYER: Tsk. <Obrigado> pelo alerta, mestre dos magos. Eu só perguntei o horário!"
 ,,,"#f49f67","#7626d3","CARU: Estou exagerando, foi mal. São só 6h40... Seu despertador não tocou ainda."
 ,,,"#537e9f","#1a6a36","PLAYER: Ah! Seu sacana."
-,,,"#1164d7","#dcca81","Você estava realmente ficando <desesperado>. Caru e sua zoeira sem limites..."
-,,,"#d85b3c","#1e8e99","CARU: A vida é uma corrida e você já começou o dia correndo! Vai me agradecer mais tarde, heh."
-,,,"#599f31","#95d83a","CARU: Mas agora, falo sério. O primeiro dia não é um daqueles que você vai querer atrasar."
+,,,"#1164d7","#c46953","Você estava realmente ficando <desesperado>. Caru e sua zoeira sem limites..."
+,,,"#d85b3c","#17c3f8","CARU: A vida é uma corrida e você já começou o dia correndo! Vai me agradecer mais tarde, heh."
+,,,"#599f31","#bc89f3","CARU: Mas agora, falo sério. O primeiro dia não é um daqueles que você vai querer atrasar."
 ,,,"#b16336","#318056","CARU: Quão mais cedo você sair, melhor!"
 ,,,"#eb765d","#81b385","CARU: Alguns dos professores da Lótus podem ser uns carrascos."
 ,,,"#0801c0","#c115fe","PLAYER: Eu bem que tô questionando o sadismo de quem decidiu marcar aula pras 7h30 da manhã..."
@@ -472,12 +470,10 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#3c926a","#3c0ee7","Parte de você amaldiçoa o seu eu da noite anterior que falou que com certeza ia dar tempo de se organizar de manhã."
 ,,,"#73cb8a","#40ad6c","Estando <pronto> para sair, você se direciona para o andar de baixo do dormitório."
 ,,"LateArrival",,,
-,,,"#80470a","#94e1b5","..."
-,,,"#9bc864","#94e1b5","..."
 ,,,"#d815d3","#f07de7","A regra diz que não se pode correr nos corredores..."
 ,,,"#508baa","#1a79ef","Então você aperta o passo e acaba esbarrando em alguém com força, quase te derrubando."
 ,,,"#a9b4b7","#6a233e","PLAYER: Opa-"
-,,,"#0c26e5","#78f6c9","Ela parece estar com pressa, quase correndo até o final do corredor."
+,,,"#0c26e5","#7d77aa","Ela parece estar com pressa, quase correndo até o final do corredor."
 ,,,"#08d36f","#83e0fe","PLAYER: ... Ei!"
 ,,,"#8f8f9a","#33e68c","Você até se questiona por um instante se você não estaria <atrasado>."
 ,,,"#215731","#d9f779","Na correria ela nem percebeu que deixou cair um papel."
@@ -488,8 +484,6 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#6e8d82","#6258b2","PLAYER: (Hortênsia... Acho que vou ter que te devolver o desenho...) "
 ,,,"#fa1ee8","#9500dc","Você guarda o desenho com cuidado em uma das pastas na sua mochila."
 ,,,"#c35020","#119b39","Você ouve um barulho que parece ser o barco chegando e se apressa para descer as escadas."
-,,,"#7af0ae","#94e1b5","..."
-,,,"#1b8118","#94e1b5","..."
 ,,,"#2c89f6","#c6d3cf","Por um momento você acha que vai perder o barco, mas você consegue entrar nele bem a tempo."
 ,,"GoodNight",,,
 ,,,"#39106c","#2adbe5","Você chega no seu quarto e olha em volta."
@@ -523,8 +517,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#70a261","#db90c1","???: Ah...! Eu estou bem. Não se preocupe..."
 ,,,"#54bca3","#645d91","???: Só não esperava alguém falar comigo."
 ,,,"#e52624","#9b2622","PLAYER: Hum? Ok. Er... Então. Por acaso você tá procurando sua sala?"
-,,,"#ba29bf","#5df05d","???: Sim... Mas esse lugar é... gigante..."
-,,,"#7a74e1","#8b4255","PLAYER: Né, também estou um pouco <perdido>."
+,,,"#ba29bf","#2ee31c","???: Sim... Mas esse lugar é gigante."
+,,,"#7a74e1","#f0bcb8","PLAYER: Né, também estou um pouco <perdido>."
 ,,,"#91232a","#391129","PLAYER: A propósito, eu me chamo PLAYER. E você, quem é?"
 ,,,"#1d502a","#6df540","IPÊ: Ah... Eu me chamo Ipê. P...prazer te conhecer!"
 ,,,"#9e9022","#8aaa60","PLAYER: E que sala você tá procurando?"
@@ -535,10 +529,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#174bf0","#ef4817","PLAYER: Hum, bacana! Eu sou da Biologia."
 ,,,"#e51982","#6e34eb","Vocês andam juntes até a sala, entrando nela."
 ,,"CarnaIntro",,,
-,,,"#6d40ef","#94e1b5","..."
-,,,"#7f3b9f","#94e1b5","..."
-,,,"#7a34b2","#6595a8","Você mal tem tempo o suficiente para sentar antes que o professor começasse a falar."
-,,,"#e56064","#086913","Você olha em volta, tentando identificar onde Ipê se sentou, vendo elu algumas cadeiras atrás de você."
+,,,"#7a34b2","#09329a","Você mal tem tempo o suficiente para sentar antes que o professor começasse a falar."
+,,,"#e56064","#562cfa","Você olha em volta, tentando identificar onde Ipê se sentou, vendo elu algumas cadeiras atrás de você."
 ,,,"#3b3dfd","#d42f25","Elu ainda parece nervose, você tenta direcionar um sorriso pra acalmá-le, mas elu está encarando a própria mesa."
 ,,,"#db87a7","#26c6cc","???: Agora que estamos todos aqui. Bom dia, estudantes."
 ,,,"#fedc14","#65c258","???: Eu sou o professor Samambaia."
@@ -563,7 +555,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#2377b5","#674b7b","PLAYER: E como você sabe disso?"
 ,,,"#a1618d","#668a29","CRAVO: É a terceira vez que eu estou pegando essa matéria..."
 ,,,"#e25963","#4d4c12","PLAYER: Ahh... Essa matéria é tão pesada assim?"
-,,,"#cc1c8f","#6adae8","CRAVO: É a pior de todas, o Mamba é um dos maiores carrascos do departamento."
+,,,"#cc1c8f","#ad3ce5","CRAVO: É a pior de todas, o Mamba é um dos maiores carrascos do departamento."
 ,,,"#b039c9","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
 ,,,"#c99b2e","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
 ,,,"#0c9af3","#db60f2","Para mim ele só parece um velhinho indefeso."
@@ -584,7 +576,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#daff2f","#d728eb","MAMBA: PLAYER e Ipê!"
 ,,,"#fc6dd7","#666d30","Você leva um susto quando a voz do Professor Mamba ecoa pela sala."
 ,,,"#617639","#c7ab3a","Imediatamente você levanta a mão."
-,,,"#824c59","#13b14c","MAMBA: Vocês vão ficar com o tema de ''Animais do mundo Plantae''."
+,,,"#824c59","#45929b","MAMBA: Vocês vão ficar com o tema ''Animais do mundo Plantae''."
 ,,,"#a69dbf","#fad783","CRAVO: Você pegou o melhor tema!"
 ,,,"#7dc2e5","#0b9a3a","CRAVO: Faz eu desejar que a gente tivesse sido uma dupla."
 ,,,"#cd0c97","#a7aea7","Você sorri de leve pro Cravo antes de ir atrás de Ipê."
@@ -737,15 +729,11 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#2b3bb1","#8568f9","Apesar do aviso do Caru, até você encontrar todos os materiais para as aulas, já havia passado uns 20 minutos."
 ,,,"#8cf063","#93e668","Parte de você amaldiçoa o seu eu da noite anterior que falou que com certeza ia dar tempo de se organizar de manhã."
 ,,,"#d53c5c","#ec502d","Estando <pronto> para sair, você se direciona para o andar de baixo do dormitório."
-,,,"#eef0c0","#94e1b5","..."
 ,,"LateArrival",,,
-,,,"#361a6b","#94e1b5","..."
 ,,,"#af98ad","#699810","A regra diz que não se pode correr nos corredores..."
 ,,,"#ddf6ae","#b7b586","Então você aperta o passo até chegar na entrada."
 ,,,"#bb92f9","#81ea7b","Você consegue ver ao longe o barco que acabou de sair."
 ,,,"#5a3b7b","#a40ded","Você suspira e desce humildemente as escadas até o andar principal do dormitório em um gesto de aceitação."
-,,,"#7f7969","#94e1b5","..."
-,,,"#b9d47b","#94e1b5","..."
 ,,,"#78acb8","#501692","Ao chegar à recepção do dormitório, você se depara com um senhor com laranjas presas na barba."
 ,,,"#36b3dd","#ab4e21","LARANJEIRA: Opa. Você é estudante do turno da manhã?"
 ,,,"#9df643","#9049a7","PLAYER: Sou sim!"
@@ -831,8 +819,6 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#1419ef","#606769","LARANJEIRA: Posso lhe contar a lenda desde o início... Se você estiver com tempo."
 ,,,"#a6e132","#7cc852","Claro, você atiçou minha curiosidade."
 ,,,"#4359f5","#4a7245","LARANJEIRA: ... Era uma vez, ..."
-,,,"#9e0fa4","#94e1b5","..."
-,,,"#e25f70","#94e1b5","..."
 ,,,"#0bf19f","#5641aa","LARANJEIRA: ... um estudante notável chamado João, conhecido por sua curiosidade e amor pela agricultura."
 ,,,"#c3f160","#e7b316","LARANJEIRA: Ele habitava o antigo feudo de Lótus, muito antes dessa universidade existir."
 ,,,"#4cd139","#1cfd13","LARANJEIRA: Um dia, enquanto explorava os arredores da faculdade, ele descobriu uma semente peculiar que parecia irradiar uma aura mágica."
@@ -851,8 +837,6 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#56f54b","#7326bb","LARANJEIRA: Ele compartilhava seu conhecimento com os jovens da região, inspirando-os a explorar os limites da magia e da botânica."
 ,,,"#dbcfb0","#e0b906","LARANJEIRA: Se tornou tão popular que vários príncipes e princesas dos reinos vizinhos vinham estudar com ele."
 ,,,"#4828ed","#875f1a","LARANJEIRA: Quando já estava mais velho, resolveu criar uma universidade, que hoje é a Lótus."
-,,,"#d674dd","#94e1b5","..."
-,,,"#8f67ef","#94e1b5","..."
 ,,,"#0e9dc2","#dd0c26","LARANJEIRA: Definitivamente, uma de nossas figuras mais notáveis."
 ,,,"#0598c6","#527ecf","PLAYER: Carambolas. Há quanto tempo que foi isso?"
 ,,,"#1b7924","#b06430","LARANJEIRA: A universidade tem mais de 500 anos."
@@ -865,27 +849,19 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#e4bed3","#8f8f91","PLAYER: Interessante... Vou manter isso em mente. Obrigado pela história, Sr. Laranjeira."
 ,,,"#2ea539","#15d503","LARANJEIRA: Sem problemas. Até logo, jovem!"
 ,,,"#7613b6","#5f1a77","Você sobe as escadas de volta ao seu quarto."
-,,,"#6b3cec","#94e1b5","..."
-,,,"#37205d","#94e1b5","..."
 ,,,"#79e443","#2409ad","Obrigado, mas talvez outra hora."
 ,,,"#a335af","#50a330","LARANJEIRA: Oh, sim. Tudo bem. Você deve estar <ocupado>. Perdão por atrapalhar."
 ,,,"#89a4d6","#5f1a77","Você sobe as escadas de volta ao seu quarto."
-,,,"#910f6e","#94e1b5","..."
-,,,"#655162","#94e1b5","..."
 ,,,"#e854fd","#027d07","Observar o que o Caru está fazendo."
 ,,,"#afe309","#ab783a","Caru está profundamente envolvido no jogo. Agora vendo de perto, você percebe que é um jogo de ritmo."
 ,,,"#375c0d","#82072e","Você também nota que ele não está jogando com alguém, e que na verdade a outra pessoa está apenas assistindo."
 ,,,"#b02672","#a26a11","O Caru está mandando muito bem, é melhor não interromper o momento."
 ,,,"#b76c50","#ae119b","Ao olhar para trás, você percebe que o Sr. Laranjeira não está mais ali."
 ,,,"#28c980","#c65f8f","Dessa forma, somente lhe resta voltar para o seu quarto."
-,,,"#02cf94","#94e1b5","..."
-,,,"#ff6d18","#94e1b5","..."
 ,,,"#37a127","#2caecb","Subir para o quarto."
 ,,,"#89a047","#bf9d23","PLAYER: Perdão, eu preciso ir fazer uma coisa."
 ,,,"#87ee1a","#4a5fba","LARANJEIRA: Oh, sim. Tudo bem. Você deve estar <ocupado>. Perdão por atrapalhar."
 ,,,"#e0ff13","#5f1a77","Você sobe as escadas de volta ao seu quarto."
-,,,"#d2b6d1","#94e1b5","..."
-,,,"#31a5e0","#94e1b5","..."
 ,,"GoodNight",,,
 ,,,"#1bae14","#4084b4","Você chega no seu quarto e olha em volta."
 ,,,"#5546cc","#cc9652","Apesar do começo do dia ter sido corrido, ele foi relativamente tranquilo no fim das contas."
@@ -954,13 +930,13 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#b29cd1","#3e9eb8","???: Ah...! Eu estou bem. Não se preocupe..."
 ,,,"#f77359","#5a94d4","???: Só não esperava alguém falar comigo."
 ,,,"#50e0f2","#6579df","PLAYER: Hum? Ok. Er... Então. Por acaso você tá procurando sua sala?"
-,,,"#24a91b","#2ee31c","???: Sim... Mas esse lugar é... gigante..."
+,,,"#24a91b","#2ee31c","???: Sim... Mas esse lugar é gigante."
 ,,,"#efbc84","#f0bcb8","PLAYER: Né, também estou um pouco <perdido>."
 ,,,"#7fa4b1","#f6e802","PLAYER: A propósito, eu me chamo PLAYER!"
 ,,,"#6055cd","#894855","PLAYER: E você? Qual o seu nome?"
-,,,"#0c9661","#f4ce99","IPÊ: Ah... Eu me chamo Ipê. P...prazer te conhecer!"
+,,,"#0c9661","#6df540","IPÊ: Ah... Eu me chamo Ipê. P...prazer te conhecer!"
 ,,,"#b1d41d","#2465a3","PLAYER: E que sala você tá procurando?"
-,,,"#e2b06e","#81933b","IPÊ: Introdução à Ecologia..."
+,,,"#e2b06e","#e0c830","IPÊ: Introdução à Ecologia..."
 ,,,"#36f1ed","#2d1940","IPÊ: Mas eu não estou conseguindo entender o aplicativo..."
 ,,,"#a9b920","#351920","PLAYER: Ele é péssimo mesmo."
 ,,,"#3d23a5","#2def56","PLAYER: Mas você deu sorte, eu também estou indo pra lá!"
@@ -977,8 +953,6 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#23500b","#8d0b4a","???: O que estão esperando? Podem entrar antes de mim."
 ,,,"#fcc971","#006f9b","Essa foi a deixa pra Ipê entrar na sala o mais rápido possível."
 ,,,"#ac25b9","#870f38","E você vai logo atrás delu, não querendo mais ser vítima do mau humor do professor."
-,,,"#7f7969","#94e1b5","..."
-,,,"#b9d47b","#94e1b5","..."
 ,,"CarnaIntro",,,
 ,,,"#c7bdca","#09329a","Você mal tem tempo o suficiente para sentar antes que o professor começasse a falar."
 ,,,"#7e4900","#bad10c","Você olha em volta, tentando identificar onde Ipê se sentou, vendo elu algumas cadeiras atrás de você."
@@ -1069,8 +1043,6 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#0e14fb","#6402b5","PLAYER: Vamos fazer nosso melhor, certo?"
 ,,,"#37234f","#1792c1","Elu concorda com a cabeça, parecendo hesitante."
 ,,,"#fdef2f","#4c93e7","Vocês então andam em direção à saída da sala."
-,,,"#7f7969","#94e1b5","..."
-,,,"#b9d47b","#94e1b5","..."
 ,,"AfterClass",,,
 ,,,"#c8d7db","#35c44a","PLAYER: Então, como você quer fazer o trabalho?"
 ,,,"#5eceea","#f03722","IPÊ: Eu ia te perguntar a mesma coisa, he...he."
