Event System (Part 2)

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -670,7 +670,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#7dfa0a","#bcd696","PLAYER: (Okay, isso foi bastante emoção pra não ser nem 7:10 da manhã.)"
 ,,,"#6fb559","#ac3018","PLAYER: (Essa jornada mal começou, vamos tentar pensar positivo!)"
 ,,"Arrival",,,
-,,,"#7a8242","#a15c7c","PLAYER: (O primeiro dia foi tranquilo no fim das contas, haha..)"
+,,,"#7a8242","#a15c7c","PLAYER: (O primeiro dia foi tranquilo no fim das contas, haha...)"
 ,,,"#3e00b9","#9a2e44","PLAYER: (Achei que seria mais difícil graças ao papo do Caru hoje de manhã.)"
 ,,,"#e6fad3","#9971fd","O seu celular vibra insistentemente no seu bolso e você coloca ele no silencioso, querendo apreciar o pequeno momento que você tem agora."
 ,,,"#a67dbc","#32f37b","... Um sentimento de culpa te consome um pouco..."
@@ -1053,8 +1053,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#be964e","#9f80fc","PLAYER: Não parece ser muito complexo, se a gente pegar pra fazer, acho que a gente mata em um dia."
 ,,,"#6015c0","#9ac7e1","IPÊ: Talvez a parte de encontrar as espécies sim, mas isso de identificar parece difícil..."
 ,,,"#d6d407","#9ac7e1","IPÊ: Talvez a parte de encontrar as espécies sim, mas isso de identificar parece difícil..."
-,,,"#2c9222","#3512bc","I trust in our potential. It will be easy."
-,,,"#ae30d4","#359e7a","If you keep talking like that, it won't work out."
+,,,"#2c9222","#3512bc","Eu acredito em nosso potencial. Vai ser de boa."
+,,,"#ae30d4","#359e7a","Só não vai dar certo se você continuar a pensar assim."
 ,,,"#b29f3e","#407134","IPÊ: Se você diz..."
 ,,,"#bc3207","#d2631f","PLAYER: Quando você acha que a gente vai conseguir se encontrar?"
 ,,,"#e99911","#fcf2b4","PLAYER: Sei que Botânica em geral é um curso mais pesado que Biologia, então se você me falar como estão seus horários..."
