--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -1047,7 +1047,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#c8d7db","#35c44a","PLAYER: Então, como você quer fazer o trabalho?"
 ,,,"#5eceea","#f03722","IPÊ: Eu ia te perguntar a mesma coisa, he...he."
 ,,,"#5b212e","#5cbf53","Humm... Vamos revisar o que é pra fazer primeiro..."
-,,,"#f3256c","#b9d0cc","Ele falou pra gente encontrar no campus pelo menos 2 espécies diferentes de animais plantae que estejam em algum tipo de relação ecológica..."
+,,,"#f3256c","#b9d0cc","PLAYER: Ele falou pra gente encontrar no campus pelo menos 2 espécies diferentes de animais plantae que estejam em algum tipo de relação ecológica..."
 ,,,"#bdd447","#2ef3e9","IPÊ: Isso, e aí analisar as interações entre esses organismos e o ambiente."
 ,,,"#d40fec","#c9da8b","IPÊ: Ah! E temos que fotografar também."
 ,,,"#be964e","#9f80fc","PLAYER: Não parece ser muito complexo, se a gente pegar pra fazer, acho que a gente mata em um dia."
