Trying to fix the map

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -1071,7 +1071,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#b16a2c","#9cef93","IPÊ: Nesse caso, acho que a nossa melhor opção vai ser o lago."
 ,,,"#15d9c5","#9cef93","IPÊ: Nesse caso, acho que a nossa melhor opção vai ser o lago."
 ,,,"#a81535","#7027e1","Pelo menos não vamos ter que ir muito longe..."
-,,,"#c4d55a","#996ad9","IPÊ: Exatamente!"
+,,,"#c4d55a","#996ad9","IPÊ: Ah, verdade..."
 ,,,"#0ee4c3","#6fd6d7","Sim... Mas eu também adoraria dar uma olhada no parque algum dia."
 ,,,"#7ed498","#f9990e","IPÊ: É lindo, você deveria aproveitar quando puder ir!"
 ,,,"#e39539","#b8489e","PLAYER: Afinal, eu andei pensando... Isso tudo deve ser a forma dele forçar a gente a conhecer o campus, né?"
