[Feedback] Textual Changes

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -126,7 +126,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#f39079","#0b97b1","PLAYER: Sem querer parecer <intrometido>, mas é uma baita coincidência que o seu nome é o mesmo do dormitório."
 ,,,"#28d33b","#49e612","LARANJEIRA: Haha! Isso não é uma coincidência, meu jovem! Eu sou supervisor desse dormitório desde que ele foi construído."
 ,,,"#1653ed","#ca8137","PLAYER: Mas isso não faz, tipo, muito tempo?"
-,,,"#d9105a","#4a18a1","PLAYER: (Meu deus eu chamei ele de velho)."
+,,,"#d9105a","#4a18a1","PLAYER: (Minha nossa... Eu chamei ele de velho)."
 ,,,"#35fa1d","#2d3e37","LARANJEIRA: HAHA! Fazem só 25 anos!"
 ,,,"#bdd7c2","#e8d73f","PLAYER: Isso significa que o senhor conheceu todas as plantas mais famosas, não é?"
 ,,,"#c3249a","#1c0a4a","PLAYER: Até o Tony Ramos que se formou há uns anos atrás?"
@@ -808,7 +808,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#73e84d","#4b223b","Perguntar sobre o álbum de fotos."
 ,,,"#a1b07a","#b18535","O Sr. Laranjeira lhe apresenta uma variedade de famosos do campus, incluindo o tal do ''Tony Ramos''."
 ,,,"#4c935d","#64063d","Além dele, vários outros famosos como ''Dalva Oliveira'', ''Mônica Carvalho''..."
-,,,"#8ab0f5","#ef1b69","A maioria você não conhece apesar, que um ou outro você lembra de ver pelos noticiários."
+,,,"#8ab0f5","#ef1b69","A maioria você não conhece, apesar que um ou outro você lembra de ver pelos noticiários."
 ,,,"#2878d3","#29dd34","Até que você nota um bastante peculiar... ''João-Pé-de-Feijão''."
 ,,,"#40f387","#3c6ac6","PLAYER: Huh? Esse daqui me é familiar."
 ,,,"#9a219a","#aab013","LARANJEIRA: Ah, sim. Esse é o nosso primeiro reitor da Lótus. Existem várias lendas sobre ele."
@@ -821,7 +821,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#4359f5","#4a7245","LARANJEIRA: ... Era uma vez, ..."
 ,,,"#0bf19f","#5641aa","LARANJEIRA: ... um estudante notável chamado João, conhecido por sua curiosidade e amor pela agricultura."
 ,,,"#c3f160","#e7b316","LARANJEIRA: Ele habitava o antigo feudo de Lótus, muito antes dessa universidade existir."
-,,,"#4cd139","#1cfd13","LARANJEIRA: Um dia, enquanto explorava os arredores da faculdade, ele descobriu uma semente peculiar que parecia irradiar uma aura mágica."
+,,,"#4cd139","#1cfd13","LARANJEIRA: Um dia, enquanto explorava, ele descobriu uma semente peculiar que parecia irradiar uma aura mágica."
 ,,,"#2c2d08","#2d5c1f","LARANJEIRA: Intrigado, João decidiu plantar a semente em um solo especial que ele mesmo preparou."
 ,,,"#10eb3c","#ee846d","LARANJEIRA: Para sua surpresa, a semente germinou em um pé-de-feijão extraordinário que se erguia em direção aos céus."
 ,,,"#09a11d","#cc7a7b","LARANJEIRA: Este não era um pé-de-feijão comum, pois ele emanava magia e mistério."
@@ -846,10 +846,10 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#f043a2","#9fcc4f","PLAYER: E eu posso ver esse álbum?"
 ,,,"#2fbc76","#0b5f9a","LARANJEIRA: Infelizmente, esse não... Ele está guardado com muito cuidado."
 ,,,"#e2cf42","#f435f6","LARANJEIRA: Mas quem sabe, se você se destacar na Herbologia Mágica, talvez um dia seja <incluído> nele!"
-,,,"#e4bed3","#8f8f91","PLAYER: Interessante... Vou manter isso em mente. Obrigado pela história, Sr. Laranjeira."
+,,,"#e4bed3","#8f8f91","PLAYER: Interessante... Vou manter isso em mente. <Obrigado> pela história, Sr. Laranjeira."
 ,,,"#2ea539","#15d503","LARANJEIRA: Sem problemas. Até logo, jovem!"
 ,,,"#7613b6","#5f1a77","Você sobe as escadas de volta ao seu quarto."
-,,,"#79e443","#2409ad","Obrigado, mas talvez outra hora."
+,,,"#79e443","#2409ad","<Obrigado>, mas talvez outra hora."
 ,,,"#a335af","#50a330","LARANJEIRA: Oh, sim. Tudo bem. Você deve estar <ocupado>. Perdão por atrapalhar."
 ,,,"#89a4d6","#5f1a77","Você sobe as escadas de volta ao seu quarto."
 ,,,"#e854fd","#027d07","Observar o que o Caru está fazendo."
@@ -866,14 +866,14 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#1bae14","#4084b4","Você chega no seu quarto e olha em volta."
 ,,,"#5546cc","#cc9652","Apesar do começo do dia ter sido corrido, ele foi relativamente tranquilo no fim das contas."
 ,,,"#2960cb","#9b09ed","Você tenta começar a organizar as coisas que estão espalhadas pelo quarto."
-,,,"#7d40d7","#469868","PLAYER: (O mínimo que eu posso fazer é começar amanhã um pouco mais organizado do que hoje!)"
+,,,"#7d40d7","#469868","PLAYER: (O mínimo que eu posso fazer é começar amanhã um pouco mais <organizado> do que hoje!)"
 ,,,"#a1a842","#caf96e","Você está no meio do processo de organizar suas coisas quando Caru chega no quarto."
 ,,,"#912d08","#520820","Os olhos dele estão vermelhos e ele tem um sorrisinho nos lábios."
 ,,,"#354f1c","#2431c7","PLAYER: Opa, eaê!"
 ,,,"#18acf1","#f93f9a","CARU: Tá tentando dar um jeito nas suas coisas?"
 ,,,"#f6e615","#9c6427","PLAYER: A palavra chave é ''tentando''."
 ,,,"#e68dda","#eb9a52","PLAYER: Cada vez que eu tento organizar algo em um lugar eu encontro algo que deveria estar em outro..."
-,,,"#53bf3b","#c3d269","PLAYER: É um loop interminável!"
+,,,"#53bf3b","#c3d269","PLAYER: É um ciclo interminável!"
 ,,,"#c09492","#a94a3b","CARU: Me admira que você tenha energia pra fazer isso depois do seu primeiro dia."
 ,,,"#77829f","#cee2a8","PLAYER: Pô, foi surpreendentemente tranquilo, na verdade?"
 ,,,"#6326b2","#a3dd25","PLAYER: Tem muita gente, tem muitos lugares e eu ainda estou um pouco <confuso> com tudo que está acontecendo."
@@ -882,7 +882,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#7cd0c8","#49e4a8","PLAYER: Você tá perto de formar, né?"
 ,,,"#9d7714","#db32b1","CARU: Sétimo semestre, a liberdade tão perto que quase sinto o gosto dela nos meus lábios."
 ,,,"#dab9a2","#73c80d","PLAYER: Seu curso não pode ser tão ruim assim, vai."
-,,,"#2112aa","#667dc1","CARU: Estatística é tipo, o inferno na terra."
+,,,"#2112aa","#667dc1","CARU: Estatística é tipo, o inferno na Terra."
 ,,,"#f3cc45","#ec616d","PLAYER: Eu imagino que pra alguém como eu, talvez."
 ,,,"#a25e3a","#ab4e0c","PLAYER: Mas é porque me faz pensar muito em matemática na sua forma pura."
 ,,,"#1e3825","#7b3523","CARU: Pior que matemática pura é tipo, mais filosófica até."
@@ -891,7 +891,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#110ffe","#b894ad","CARU: É muito complexo pra pessoas normais entenderem."
 ,,,"#55c6cd","#d7a1e3","CARU: Mas todas as pessoas minimamente estudadas acabam aplicando isso pro curso delas sem nem precisar estudar tanto quanto a gente na graduação."
 ,,,"#727137","#cf255b","PLAYER: Uou, vai lá, fala sua verdade!"
-,,,"#37d313","#d14909","CARU: Eu precisava botar pra fora, porque meu deus."
+,,,"#37d313","#d14909","CARU: Eu precisava botar pra fora, porque minha nossa..."
 ,,,"#b90898","#fc6a38","PLAYER: Pelo menos as pessoas são legais?"
 ,,,"#b78db5","#b3da37","CARU: Podia ser pior."
 ,,,"#b2e702","#2ae13d","CARU: Mas não compensa o inferno que é o curso."
@@ -900,7 +900,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#e29880","#6886b6","CARU: Mas eu fico feliz que você está curtindo."
 ,,,"#d16595","#32a245","PLAYER: Espero não acabar que nem você no sétimo semestre."
 ,,,"#b336ff","#5be805","CARU: Eu sou um em um milhão."
-,,,"#6dac98","#1f1f3c","PLAYER: Pro bom e pro ruim."
+,,,"#6dac98","#1f1f3c","PLAYER: Pro bem ou pro mal."
 ,,,"#642ce2","#2abc25","CARU: Espero que meus lados bons compensem minhas falhas."
 ,,,"#0840ac","#f0b813","PLAYER: Contando o quanto você já me ajudou, seus índices de aprovação estão no topo!"
 ,,,"#bbc53a","#41992a","CARU: Ótimo, vou manter isso assim, viu?"
@@ -916,7 +916,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,"IpeIntro",,,
 ,,,"#402d35","#37a6ee","Você chega no prédio de aulas sem mais problemas."
 ,,,"#7e7c40","#c47bd0","Agora você tem um novo desafio - Encontrar a sala de aula de Ecologia."
-,,,"#928025","#be6090","PLAYER: (Ainda bem que anotei, eu sou profissional em esquecer essas coisas.)"
+,,,"#928025","#be6090","PLAYER: (Ainda bem que anotei, eu estaria em maus lençóis se não tivesse...)"
 ,,,"#16deab","#7f0d38","Você sabe que se não tivesse anotado estaria em maus lençóis."
 ,,,"#3721d6","#d73354","Aparentemente a única forma de obter tal informação nestes tempos é pelo aplicativo da universidade."
 ,,,"#6b2484","#6e295f","A experiência de usuário da interface gráfica é de qualidade questionável, tornando a tarefa de encontrar qualquer informação uma verdadeira dificuldade."
@@ -944,7 +944,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#afce24","#7903fe","IPÊ: Ah, eu estou fazendo Botânica..."
 ,,,"#a96df2","#446014","PLAYER: Ah, bacana! Eu sou da Biologia."
 ,,,"#8b748c","#007ba7","Você ia propor que procurem a sala juntes, mas é <interrompide> por um senhor com uma extensa barba folheada."
-,,,"#2bd3c0","#ad67e7","???: [snd_door]Vocês vão ficar aí parades ou vão entrar na sala?"
+,,,"#2bd3c0","#ad67e7","???: [snd_door]Vocês vão ficar aí plantades ou vão entrar na sala?"
 ,,,"#c18e43","#0aa82c","PLAYER: Bem, a gente não sabe se essa é a nossa-"
 ,,,"#05229d","#8b3784","???: Vocês estão aqui para Introdução à Ecologia?"
 ,,,"#3c79e8","#aacbe3","PLAYER: Si-"
@@ -954,7 +954,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#fcc971","#006f9b","Essa foi a deixa pra Ipê entrar na sala o mais rápido possível."
 ,,,"#ac25b9","#870f38","E você vai logo atrás delu, não querendo mais ser vítima do mau humor do professor."
 ,,"CarnaIntro",,,
-,,,"#c7bdca","#09329a","Você mal tem tempo o suficiente para sentar antes que o professor começasse a falar."
+,,,"#c7bdca","#09329a","Você mal teve tempo o suficiente para sentar antes que o professor começasse a falar."
 ,,,"#7e4900","#bad10c","Você olha em volta, tentando identificar onde Ipê se sentou, vendo elu algumas cadeiras atrás de você."
 ,,,"#6b7bb3","#7628c9","Elu ainda parece nervose, você tenta direcionar um sorriso pra acalmá-le, mas elu está encarando a própria mesa."
 ,,,"#0c69d6","#09a54e","???: Agora que estamos todos aqui. Bom dia, estudantes."
@@ -968,18 +968,18 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#efe66d","#d70a79","Do seu lado, Cravo estava ignorando completamente o que o professor dizia."
 ,,,"#98b0c3","#afd5da","E um olhar rápido pra trás, você vê Ipê anotando cada palavra que o professor falava."
 ,,,"#4ee9b4","#d0b376","Enquanto escreve, você consegue ouvir um murmúrio."
-,,,"#b1deec","#37880c","CRAVO: ''E vocês serão atribuídos uma dupla que já foi escolhida previamente.''"
-,,,"#f1c057","#19b4ac","MAMBA: E vocês serão atribuídos uma dupla que já foi escolhida previamente."
+,,,"#b1deec","#37880c","CRAVO: ''E vocês serão atribuídos uma dupla escolhida por mim.''"
+,,,"#f1c057","#19b4ac","MAMBA: E vocês serão atribuídos uma dupla escolhida por mim."
 ,,,"#bf6045","#b07263","CRAVO: ... ''A lista de presença'' ... ''devem ter desistências até o final''..."
 ,,,"#390dea","#48a9b5","MAMBA: Vou usar a lista de presença como referência, mas devem ter desistências até o final."
 ,,,"#e984e4","#af842d","CRAVO: ... ''levantem a mão''..."
 ,,,"#1446b5","#1c2777","MAMBA: Quando eu chamar seu nome e o de sua dupla, levantem a mão."
 ,,,"#a75f64","#b273a4","Você se inclina para sussurrar para o Cravo sem atrapalhar a aula."
-,,,"#b20101","#ecf253","PLAYER: (Como que você sabia exatamente o que ele ia falar?)"
-,,,"#50157e","#109cfd","CRAVO: Ele falou exatamente a mesma coisa nos últimos dois semestres."
-,,,"#dd8156","#674b7b","PLAYER: E como você sabe disso?"
-,,,"#19ae6d","#668a29","CRAVO: É a terceira vez que eu estou pegando essa matéria..."
-,,,"#60404c","#95cfda","PLAYER: Ahh... Essa matéria é tão pesada assim?"
+,,,"#b20101","#ecf253","PLAYER: [slant]Como você sabia exatamente o que ele ia falar?[/slant]"
+,,,"#50157e","#109cfd","CRAVO: [slant]Ele falou exatamente a mesma coisa nos últimos dois semestres.[/slant]"
+,,,"#dd8156","#674b7b","PLAYER: [slant]E como você sabe disso?[/slant]"
+,,,"#19ae6d","#668a29","CRAVO: [slant]É a terceira vez que eu estou pegando essa matéria...[/slant]"
+,,,"#60404c","#95cfda","PLAYER: [slant]Ahh... Essa matéria é tão pesada assim?[/slant]"
 ,,,"#e496b7","#6adae8","CRAVO: É a [slant]pior[/slant] de todas, o Mamba é um dos maiores carrascos do departamento."
 ,,,"#e18a21","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
 ,,,"#8baee6","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
@@ -1007,7 +1007,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#dcf068","#6bba38","Você se direciona para perto de Ipê, se sentindo <aliviado> por pelo menos ser alguém que você já conhece minimamente."
 ,,,"#98ef72","#744807","Você acena na direção delu e elu acena de volta, parecendo nervose."
 ,,,"#84b4af","#53c34e","Professor Mamba termina de anunciar as duplas."
-,,,"#38b535","#7d3353","FERN: MAMBA: Por hoje vai ser isso!"
+,,,"#38b535","#7d3353","MAMBA: Por hoje vai ser isso!"
 ,,,"#2a1dad","#7b7fd8","Em seguida, ele olha em direção ao relógio."
 ,,,"#7a43f2","#e697e7","MAMBA: Ótimo, vou conseguir chegar pro almoço do departamento!"
 ,,,"#d80923","#b9ec6a","PLAYER: (Todo meu desespero hoje de manhã pra menos de uma hora de aula...)"
@@ -1020,7 +1020,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#5a0cbd","#192695","CRAVO: O velho tá totalmente me marcando..."
 ,,,"#859809","#a54690","PLAYER: Não é pra tanto, vai."
 ,,,"#4485fa","#3694e3","PLAYER: Você tem pelo menos alguma dica pra calouro de primeira viagem?"
-,,,"#21b32f","#b06ca8","CRAVO: Não deixe acumular e reza pra sua dupla aparecer."
+,,,"#21b32f","#b06ca8","CRAVO: Não deixe acumular e torça pra sua dupla aparecer."
 ,,,"#0d5a58","#02893a","CRAVO: Agora, se você me der licença, eu tenho que ir reclamar dessa aula pra outra pessoa."
 ,,,"#54d52d","#c6249e","PLAYER: Ah, é? E quem terá o prazer de te ouvir pela terceira vez?"
 ,,,"#250ef9","#41c8dc","CRAVO: Minha incrível namorada."
@@ -1034,8 +1034,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#41b967","#68aa35","Cravo vai embora de vez e você se levanta pra ir atrás de Ipê."
 ,,,"#8a8657","#5da160","Apenas para encontrá-le bem do lado da sua cadeira."
 ,,,"#f87108","#4c04d5","IPÊ: Perdão... E-eu não queria interromper..."
-,,,"#7aba10","#98c514","Relaxa! Eu só tava tentando conseguir algumas dicas."
-,,,"#291e85","#fc6a39","Ele já fez essa matéria outras vezes."
+,,,"#7aba10","#98c514","PLAYER: Relaxa! Eu só tava tentando conseguir algumas dicas."
+,,,"#291e85","#fc6a39","PLAYER: Ele já fez essa matéria outras vezes."
 ,,,"#7635b6","#c119ce","IPÊ: Oh... Descobriu algo útil?"
 ,,,"#7f7c59","#859360","PLAYER: Nada demais, não procrastinar e tals..."
 ,,,"#ff6405","#d824ee","PLAYER: Ter uma dupla que ajude..."
@@ -1046,7 +1046,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,"AfterClass",,,
 ,,,"#c8d7db","#35c44a","PLAYER: Então, como você quer fazer o trabalho?"
 ,,,"#5eceea","#f03722","IPÊ: Eu ia te perguntar a mesma coisa, he...he."
-,,,"#5b212e","#5cbf53","Humm... Vamos revisar o que é pra fazer primeiro..."
+,,,"#5b212e","#5cbf53","PLAYER: Humm... Vamos revisar o que é pra fazer primeiro..."
 ,,,"#f3256c","#b9d0cc","PLAYER: Ele falou pra gente encontrar no campus pelo menos 2 espécies diferentes de animais plantae que estejam em algum tipo de relação ecológica..."
 ,,,"#bdd447","#2ef3e9","IPÊ: Isso, e aí analisar as interações entre esses organismos e o ambiente."
 ,,,"#d40fec","#c9da8b","IPÊ: Ah! E temos que fotografar também."
@@ -1079,7 +1079,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#a26427","#1750cb","PLAYER: Me dei bem, você pelo visto até que conhece o campus, apesar de estar perdide mais cedo, ha ha."
 ,,,"#553160","#f0197c","IPÊ: Ah, tenho parentes aqui, então já visitei algumas vezes..."
 ,,,"#19f26c","#f4f7c4","Ipê está evitando olhar pra você."
-,,,"#350a5a","#20c912","IPÊ: Eu preciso ir indo agora, minha segunda aula começa daqui a pouco!"
+,,,"#350a5a","#20c912","IPÊ: Eu preciso ir indo agora, minha segunda aula começa daqui a pouco..."
 ,,,"#6cff75","#6c1c2f","Antes que você pudesse argumentar que o Professor Mamba liberou vocês uma hora mais cedo..."
 ,,,"#ea0357","#5d9fb9","Ipê já estava sumindo pelo corredor..."
 ,,,"#b57a25","#94e1b5","..."
