A few fixes to localization struct

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -1066,7 +1066,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#7fc058","#d9eec9","PLAYER: Show! Agora é só encontrar algum lugar no campus que a gente veja algumas espécies de animais."
 ,,,"#176fce","#15f128","IPÊ: Pensando aqui... Seria tão bom se a gente pudesse fazer no parque ecológico... Lá é perfeito pra isso."
 ,,,"#8d9869","#e72781","PLAYER: Eu não sabia que tinha um parque dentro do campus!"
-,,,"#d738c7","#a4bf89","IPÊ: Ahh... Não tem não. Ele fica aqui perto, mas não é aqui dentro."
+,,,"#d738c7","#a4bf89","IPÊ: Ahh... Não é aqui no campus. Mas ele fica aqui perto."
 ,,,"#9fd63d","#f8403c","PLAYER: Putz, o Mamba disse que tinha que ser dentro do campus..."
 ,,,"#b16a2c","#9cef93","IPÊ: Nesse caso, acho que a nossa melhor opção vai ser o lago."
 ,,,"#15d9c5","#9cef93","IPÊ: Nesse caso, acho que a nossa melhor opção vai ser o lago."
