--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -558,7 +558,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#cc1c8f","#ad3ce5","CRAVO: É a pior de todas, o Mamba é um dos maiores carrascos do departamento."
 ,,,"#b039c9","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
 ,,,"#c99b2e","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
-,,,"#0c9af3","#db60f2","Para mim ele só parece um velhinho indefeso."
+,,,"#0c9af3","#db60f2","Pra mim ele só parece um velhinho rabugento."
 ,,,"#39a376","#68f293","PLAYER: Ele me parece só um pouco rabugento."
 ,,,"#776ff0","#9abb89","CRAVO: Bom, isso eu até entendo. Se eu fosse brega assim eu também seria infeliz."
 ,,,"#6d3a22","#e5a113","PLAYER: Uau, você realmente não gosta do velho."
@@ -577,7 +577,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#fc6dd7","#666d30","Você leva um susto quando a voz do Professor Mamba ecoa pela sala."
 ,,,"#617639","#c7ab3a","Imediatamente você levanta a mão."
 ,,,"#824c59","#45929b","MAMBA: Vocês vão ficar com o tema ''Animais do mundo Plantae''."
-,,,"#a69dbf","#fad783","CRAVO: Você pegou o melhor tema!"
+,,,"#a69dbf","#fad783","CRAVO: Você pegou um dos melhores temas!"
 ,,,"#7dc2e5","#0b9a3a","CRAVO: Faz eu desejar que a gente tivesse sido uma dupla."
 ,,,"#cd0c97","#a7aea7","Você sorri de leve pro Cravo antes de ir atrás de Ipê."
 ,,,"#247a53","#6bba38","Você se vira na direção de Ipê, se sentindo <aliviado> por pelo menos ser alguém que você já conhece minimamente."
@@ -738,11 +738,11 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#36b3dd","#ab4e21","LARANJEIRA: Opa. Você é estudante do turno da manhã?"
 ,,,"#9df643","#9049a7","PLAYER: Sou sim!"
 ,,,"#2ad4fa","#0d86d2","LARANJEIRA: O barco acabou de sair, mas logo logo vem outro aí."
-,,,"#1832df","#f3a439","PLAYER: Nossa, ainda bem. Mas será que vai dar tempo pra mim?"
+,,,"#1832df","#f3a439","PLAYER: Nossa, ainda bem. Achei que já era pra mim."
 ,,,"#5841e4","#8f050a","PLAYER: Tenho aula em 20 minutos..."
 ,,,"#8a8868","#8c02cc","PLAYER: Será que vai demorar muito?"
 ,,,"#42c368","#f3d217","LARANJEIRA: Haha! Não se preocupe, jovem!"
-,,,"#39766b","#98eeb8","LARANJEIRA: O próximo está vindo em 5 minutinhos!"
+,,,"#39766b","#98eeb8","LARANJEIRA: O próximo está vindo em uns 5 minutinhos!"
 ,,,"#3f282d","#550d3d","Assim que ele fala isso, alguns outros alunos vão chegando no local, percebendo que também perderam o barco."
 ,,,"#80e45e","#ac6826","PLAYER: Pelo menos não sou <x> <único>."
 ,,,"#795881","#9791c7","PLAYER: Você me salvou aqui, Sr...?"
@@ -756,17 +756,17 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#c20819","#d0f908","PLAYER: Sem querer parecer <intrometido>, mas é uma baita coincidência que o seu nome é o mesmo do dormitório."
 ,,,"#3ffdcf","#82423a","LARANJEIRA: Haha! Isso não é uma coincidência, meu jovem! Eu sou supervisor desse dormitório desde que ele foi construído."
 ,,,"#14c3e7","#9676f8","PLAYER: Mas isso não faz, tipo, muito tempo?"
-,,,"#72266d","#731266","PLAYER: (Meu deus eu chamei ele de velho)."
-,,,"#9485a0","#dc309d","LARANJEIRA: HAHA! Fazem só 25 anos!"
-,,,"#d77901","#659d9e","PLAYER: Isso significa que o senhor conheceu todas as plantas mais famosas, não é?"
-,,,"#58fd6b","#e6f53f","PLAYER: Até o Tony Ramos que se formou há uns anos atrás?"
+,,,"#72266d","#731266","PLAYER: (Vish, acabei de chamar ele de velho)."
+,,,"#9485a0","#dc309d","LARANJEIRA: HAHA! Faz só 25 anos!"
+,,,"#d77901","#659d9e","PLAYER: Eita. Isso significa que o senhor conheceu todos os alunos mais famosos, né?"
+,,,"#58fd6b","#e6f53f","PLAYER: Até o Tony Ramos que se formou há anos atrás?"
 ,,,"#b7124f","#4c74c7","LARANJEIRA: Cada um deles! Eu tenho uma coleção de fotos com os alunos que se tornaram famosos da faculdade."
 ,,,"#5c3359","#cc65b2","LARANJEIRA: Eu posso te mostrar a coleção um dia se você quiser!"
 ,,,"#7d9936","#389b17","PLAYER: Eu adoraria!"
 ,,,"#5d8af0","#af0354","LARANJEIRA: Gostei do seu entusiasmo, jovem!"
 ,,,"#82b546","#40a02e","LARANJEIRA: Mas é bom você começar a ir, o barco está chegando."
 ,,,"#f42612","#693366","O Sr. Laranjeira aponta para o barco que chegava do lado de fora."
-,,,"#01b874","#807729","PLAYER: Até mais, Sr. Laranjeira, vejo você por aí."
+,,,"#01b874","#807729","PLAYER: Até mais, Sr. Laranjeira. Vejo você por aí."
 ,,,"#06f5f5","#8a5a7b","Você acena pra ele enquanto sai do dormitório, indo na direção do barco."
 ,,,"#5b1185","#7cc585","Esperar o barco lá fora."
 ,,,"#00912c","#77eccf","É melhor garantir que você não vai perder o próximo barco."
@@ -917,7 +917,6 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#402d35","#37a6ee","Você chega no prédio de aulas sem mais problemas."
 ,,,"#7e7c40","#c47bd0","Agora você tem um novo desafio - Encontrar a sala de aula de Ecologia."
 ,,,"#928025","#be6090","PLAYER: (Ainda bem que anotei, eu estaria em maus lençóis se não tivesse...)"
-,,,"#16deab","#7f0d38","Você sabe que se não tivesse anotado estaria em maus lençóis."
 ,,,"#3721d6","#d73354","Aparentemente a única forma de obter tal informação nestes tempos é pelo aplicativo da universidade."
 ,,,"#6b2484","#6e295f","A experiência de usuário da interface gráfica é de qualidade questionável, tornando a tarefa de encontrar qualquer informação uma verdadeira dificuldade."
 ,,,"#ccb896","#94e1b5","..."
@@ -930,7 +929,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#b29cd1","#3e9eb8","???: Ah...! Eu estou bem. Não se preocupe..."
 ,,,"#f77359","#5a94d4","???: Só não esperava alguém falar comigo."
 ,,,"#50e0f2","#6579df","PLAYER: Hum? Ok. Er... Então. Por acaso você tá procurando sua sala?"
-,,,"#24a91b","#2ee31c","???: Sim... Mas esse lugar é gigante."
+,,,"#24a91b","#2ee31c","???: Sim... Mas esse lugar é gigante..."
 ,,,"#efbc84","#f0bcb8","PLAYER: Né, também estou um pouco <perdido>."
 ,,,"#7fa4b1","#f6e802","PLAYER: A propósito, eu me chamo PLAYER!"
 ,,,"#6055cd","#894855","PLAYER: E você? Qual o seu nome?"
@@ -980,12 +979,12 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#dd8156","#674b7b","PLAYER: [slant]E como você sabe disso?[/slant]"
 ,,,"#19ae6d","#668a29","CRAVO: [slant]É a terceira vez que eu estou pegando essa matéria...[/slant]"
 ,,,"#60404c","#95cfda","PLAYER: [slant]Ahh... Essa matéria é tão pesada assim?[/slant]"
-,,,"#e496b7","#6adae8","CRAVO: É a [slant]pior[/slant] de todas, o Mamba é um dos maiores carrascos do departamento."
+,,,"#e496b7","#6adae8","CRAVO: [slant]É a pior de todas, o Mamba é um dos maiores carrascos do departamento.[/slant]"
 ,,,"#e18a21","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
 ,,,"#8baee6","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
 ,,,"#d2c0a0","#db60f2","Para mim ele só parece um velhinho indefeso."
-,,,"#51984f","#68f293","PLAYER: Ele me parece só um pouco rabugento."
-,,,"#2f2379","#7e1923","CRAVO: Bom, isso eu até entendo. Se eu fosse brega assim eu também seria infeliz."
+,,,"#51984f","#68f293","PLAYER: Ele só parece um pouco rabugento."
+,,,"#2f2379","#7e1923","CRAVO: Bom, isso eu até entendo. Se eu fosse brega assim eu também seria rabugento."
 ,,,"#f756c5","#48c9b9","PLAYER: Uau, você realmente não gosta do velho."
 ,,,"#5563cf","#c9b904","PLAYER: Chega a ser um nível de ódio que realmente só alguém que passou por duas reprovações entenderia."
 ,,,"#4466f4","#a7ece1","CRAVO: Vamos ver como você vai estar no final do semestre."
@@ -1007,29 +1006,29 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#dcf068","#6bba38","Você se direciona para perto de Ipê, se sentindo <aliviado> por pelo menos ser alguém que você já conhece minimamente."
 ,,,"#98ef72","#744807","Você acena na direção delu e elu acena de volta, parecendo nervose."
 ,,,"#84b4af","#53c34e","Professor Mamba termina de anunciar as duplas."
-,,,"#38b535","#7d3353","MAMBA: Por hoje vai ser isso!"
+,,,"#38b535","#7d3353","MAMBA: Por hoje é só!"
 ,,,"#2a1dad","#7b7fd8","Em seguida, ele olha em direção ao relógio."
 ,,,"#7a43f2","#e697e7","MAMBA: Ótimo, vou conseguir chegar pro almoço do departamento!"
 ,,,"#d80923","#b9ec6a","PLAYER: (Todo meu desespero hoje de manhã pra menos de uma hora de aula...)"
 ,,,"#6add22","#0cc9db","Cravo já estava com tudo guardado, pronto pra sair."
 ,,,"#58ea44","#c6521f","PLAYER: Eita! Peraí, como você guardou seu material tão rápido?"
 ,,,"#64a43d","#3c8033","CRAVO: Material? Que material?"
-,,,"#28fa7c","#987a89","PLAYER: Ha-ha! Não vai nem se encontrar com sua dupla?"
-,,,"#edd42e","#5dcf1b","CRAVO: Nem... Ele aparentemente não veio hoje..."
-,,,"#4ba2e5","#b7c347","CRAVO: É o segundo semestre que minha dupla não aparece..."
+,,,"#28fa7c","#987a89","PLAYER: Ha ha ha! Não vai nem se encontrar com sua dupla?"
+,,,"#edd42e","#5dcf1b","CRAVO: Nem... Elu aparentemente não veio hoje..."
+,,,"#4ba2e5","#b7c347","CRAVO: É o segundo semestre já que a pessoa que tá fazendo dupla comigo não aparece..."
 ,,,"#5a0cbd","#192695","CRAVO: O velho tá totalmente me marcando..."
 ,,,"#859809","#a54690","PLAYER: Não é pra tanto, vai."
 ,,,"#4485fa","#3694e3","PLAYER: Você tem pelo menos alguma dica pra calouro de primeira viagem?"
 ,,,"#21b32f","#b06ca8","CRAVO: Não deixe acumular e torça pra sua dupla aparecer."
 ,,,"#0d5a58","#02893a","CRAVO: Agora, se você me der licença, eu tenho que ir reclamar dessa aula pra outra pessoa."
 ,,,"#54d52d","#c6249e","PLAYER: Ah, é? E quem terá o prazer de te ouvir pela terceira vez?"
-,,,"#250ef9","#41c8dc","CRAVO: Minha incrível namorada."
+,,,"#250ef9","#41c8dc","CRAVO: Pff, minha namorada, claro."
 ,,,"#418ead","#66a574","CRAVO: Ela até fez a matéria semestre passado pra ver o quão ruim realmente era."
 ,,,"#1c2f46","#678402","PLAYER: E pra ela não estar aqui esse semestre... Ela desistiu ou passou?"
 ,,,"#02d535","#eed733","CRAVO: Ela passou..."
 ,,,"#ef8d9b","#aeec63","CRAVO: Não que ela me deixe esquecer que ela passou."
-,,,"#e0389e","#9b98b3","PLAYER: Ah, poxa."
-,,,"#bfe57f","#23a766","CRAVO: Até, PLAYER!"
+,,,"#e0389e","#9b98b3","PLAYER: Ah, poxa..."
+,,,"#bfe57f","#23a766","CRAVO: Enfim, eu preciso ir. Até mais, PLAYER!"
 ,,,"#884246","#2ed76f","PLAYER: A gente se vê por aí."
 ,,,"#41b967","#68aa35","Cravo vai embora de vez e você se levanta pra ir atrás de Ipê."
 ,,,"#8a8657","#5da160","Apenas para encontrá-le bem do lado da sua cadeira."
